# OneFLOW

./: .appveyor.yml  .buildinfo  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CMakeLists.txt  README.md  README_zh_CN.md  bash.html  build_oneflow.sh  build_oneflow_yt.sh  cgns.html  chatgpt.html  cmake.html  cmd.html  cuda.html  design_patterns.html  eigen.html  fortran.html  genindex.html  git.html  hdf5.html  hpc.html  index.html  info.html  julia.html  jupyter.html  latex.html  makefile.html  metis.html  mkdocs.html  modules.html  mpi.html  objects.inv  oneapi.html  oneflow.html  openacc.html  opencl.html  opengl.html  (+19 more)
codes/: CMakeLists.txt
codes/adt/include/: AdtTree.h
codes/adt/src/: AdtTree.hpp
codes/array/include/: HXArray.h  Marray.h
codes/array/src/: Marray.cpp
codes/basic/include/: Configure.h  Constant.h  HXDefine.h  HXMid.h  HXPointer.h  HXSort.h  HXStd.h  HXType.h  HXTypeBasic.h  HXVector.h  Mid.h
codes/basic/src/: HXDefine.cpp  HXMid.cpp  Mid.cpp
codes/bgmres/include/: GMRES.h  poisson.h  preconditioner.h  solution.h  systemSolver.h  util.h
codes/bgmres/src/: poisson.cpp  preconditioner.cpp  solution.cpp  systemSolver.cpp  util.hpp
codes/cgns/include/: CgnsBase.h  CgnsBaseUtil.h  CgnsBc1to1.h  CgnsBcBoco.h  CgnsBcConn.h  CgnsBcInterface.h  CgnsBcLink.h  CgnsBcRegion.h  CgnsBcRegionProxy.h  CgnsCoor.h  CgnsData.h  CgnsFactory.h  CgnsFamilyBc.h  CgnsFile.h  CgnsGlobal.h  CgnsMultiBase.h  CgnsMultiSection.h  CgnsPeriod.h  CgnsSection.h  CgnsVariable.h  CgnsZbase.h  CgnsZbaseUtil.h  CgnsZbc.h  CgnsZbc1to1.h  CgnsZbcBoco.h  CgnsZbcConn.h  CgnsZone.h  CgnsZoneUtil.h  CgnsZsection.h  HXCgns.h  cgnstypes.h
codes/cgns/src/: CgnsBase.cpp  CgnsBaseUtil.cpp  CgnsBc1to1.cpp  CgnsBcBoco.cpp  CgnsBcConn.cpp  CgnsBcInterface.cpp  CgnsBcLink.cpp  CgnsBcRegion.cpp  CgnsBcRegionProxy.cpp  CgnsCoor.cpp  CgnsData.cpp  CgnsFactory.cpp  CgnsFamilyBc.cpp  CgnsFile.cpp  CgnsGlobal.cpp  CgnsMultiBase.cpp  CgnsMultiSection.cpp  CgnsPeriod.cpp  CgnsSection.cpp  CgnsVariable.cpp  CgnsZbase.cpp  CgnsZbaseUtil.cpp  CgnsZbc.cpp  CgnsZbc1to1.cpp  CgnsZbcBoco.cpp  CgnsZbcConn.cpp  CgnsZone.cpp  CgnsZoneUtil.cpp  CgnsZsection.cpp  HXCgns.cpp
codes/chemical/include/: BlotterCurve.h  Chemical.h  MolecularProperty.h  ReactionRate.h  SchmidtNumber.h  Stoichiometric.h  Thermodynamic.h
codes/chemical/src/: BlotterCurve.cpp  Chemical.cpp  MolecularProperty.cpp  ReactionRate.cpp  SchmidtNumber.cpp  Stoichiometric.cpp  Thermodynamic.cpp
codes/common/include/: Configure.h  Stop.h
codes/common/src/: Stop.cpp
codes/cuda/include/: HybridParallel.h  PrintDevice.h  cuda_sub.h  jacobi.h  laplace2d.h  myopenacc.h
codes/cuda/src/: HybridParallel.cpp  PrintDevice.cu  cuda_sub.cu  jacobi.cpp  laplace2d_kernels.cpp  myopenacc.cpp
codes/database/include/: DataBase.h  DataBaseIO.h  DataBaseType.h  DataBook.h  DataField.h  DataObject.h  DataPage.h  DataPara.h  DataPointer.h  DataStorage.h
codes/database/src/: DataBase.cpp  DataBaseIO.cpp  DataBaseType.cpp  DataBook.cpp  DataField.cpp  DataPage.cpp  DataPara.cpp  DataStorage.cpp
codes/force/include/: AeroForce.h  AeroForceTask.h  AeroForceTaskReg.h  Force.h
codes/force/src/: AeroForce.cpp  AeroForceTask.cpp  AeroForceTaskReg.cpp  Force.cpp
codes/geometry/include/: BcData.h  BcRecord.h  Boundary.h  CalcGrid.h  CellMesh.h  CellTopo.h  CmpGrid.h  CompGrid.h  DomainInp.h  ElemFeature.h  ElementHome.h  FaceMesh.h  FaceSearch.h  FaceSolver.h  FaceTopo.h  Grid.h  GridDef.h  GridElem.h  GridFactory.h  GridMediator.h  GridPara.h  GridTask.h  IFaceLink.h  InterFace.h  NodeMesh.h  Plot3D.h  Point.h  PointFactory.h  PointSearch.h  SlipFace.h  StrGrid.h  StrRegion.h  Su2Grid.h  UnitElement.h  UnsGrid.h  Visual.h  WallDist.h
codes/geometry/src/: BcData.cpp  BcRecord.cpp  Boundary.cpp  CalcGrid.cpp  CellMesh.cpp  CellTopo.cpp  CmpGrid.cpp  CompGrid.cpp  DomainInp.cpp  ElemFeature.cpp  ElementHome.cpp  FaceMesh.cpp  FaceSearch.cpp  FaceSolver.cpp  FaceTopo.cpp  Grid.cpp  GridDef.cpp  GridElem.cpp  GridFactory.cpp  GridMediator.cpp  GridPara.cpp  GridTask.cpp  IFaceLink.cpp  InterFace.cpp  NodeMesh.cpp  Plot3D.cpp  Point.hpp  PointFactory.cpp  PointSearch.cpp  SlipFace.cpp  StrGrid.cpp  StrRegion.cpp  Su2Grid.cpp  UnitElement.cpp  UnsGrid.cpp  Visual.cpp  WallDist.cpp
codes/global/include/: ActionMap.h  ActionState.h  Com.h  Ctrl.h  Dimension.h  DimensionImp.h  FieldAlloc.h  FieldBase.h  FieldImp.h  FieldRecord.h  FieldSimu.h  FileMap.h  Iteration.h  SimuDef.h  SimuImp.h  SolverDef.h  SolverName.h  SolverRegister.h  SolverTaskReg.h  System.h  Tolerence.h
codes/global/src/: ActionMap.cpp  ActionState.cpp  Com.cpp  Ctrl.cpp  Dimension.cpp  DimensionImp.cpp  FieldAlloc.cpp  FieldBase.cpp  FieldImp.cpp  FieldRecord.cpp  FieldSimu.cpp  FileMap.cpp  Interation.cpp  SimuDef.cpp  SimuImp.cpp  SolverDef.cpp  SolverName.cpp  SolverRegister.cpp  SolverTaskReg.cpp  System.cpp  Tolerence.cpp
codes/grad/include/: Grad.h
codes/grad/src/: Grad.cpp
codes/gte/include/: GTEngineDEF.h  GteConstants.h  GteDCPQuery.h  GteDistPointSegment.h  GteDistPointTriangleExact.h  GteFunctions.h  GteSegment.h  GteTriangle.h  GteVector.h
codes/implicit/include/: ImplicitTaskReg.h  Lusgs.h
codes/implicit/src/: ImplicitTaskReg.cpp  Lusgs.cpp
codes/ins/include/: INsBcSolver.h  INsCom.h  INsCtrl.h  (+13 more)
gui/: CMakeLists.txt  main.cpp
gui/opengl/: CMakeLists.txt  MordenOgl.cpp  MordenOgl.h  test.cpp
gui/qt/: CMakeLists.txt
gui/vtk/: CMakeLists.txt  cube.cpp
modern-cfd/: CMakeLists.txt  README.txt
modern-cfd/cmake/: util.cmake
modern-cfd/src/: CMakeLists.txt
modern-cfd/ui/: CMakeLists.txt  MyDataBase.cpp  MyDataBase.h  README.txt  main.cpp  mainwindow.cpp  mainwindow.h
tools/: CMakeLists.txt
tools/codes/: CfdThread.cpp  CfdThread.h  CgnsHeader.h  Terminal.cpp  Terminal.h  cgnspanel.cpp  cgnspanel.h  cgnsview.cpp  cgnsview.h  explorer.cpp  explorer.h  leftpanel.cpp  leftpanel.h  leftpanel.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  panel.cpp  panel.h  rightpanel.cpp  rightpanel.h  rightpanel.ui  terminal.ui
tools/images/: res.qrc
(+1879 files in other folders)
